Fixed Mobile Responsive Menu and added some spacing for product name and tidied up some html in cart, product and checkout pages

--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -41,8 +41,14 @@ h2,
 .custom-nav a {
   color: #FFFFFF !important; }
 
+.nav {
+  flex-wrap: nowrap !important; }
+
 .nav-link:hover {
   height: 70px !important; }
+
+a.nav-link:hover {
+  color: #3949AB !important; }
 
 .nav-link:focus,
 .nav-link:hover {
@@ -57,6 +63,9 @@ h2,
 .navbar-toggler-icon {
   background-image: url("data:image/svg+xml,%3csvg viewBox='0 0 30 30' xmlns='http://www.w3.org/2000/svg'%3e%3cpath stroke='rgba(255, 255, 255, 1)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e") !important; }
 
+button:focus {
+  background-color: #8bc34a !important; }
+
 .boldtext,
 .font-weight-bold {
   font-weight: bold;
@@ -67,18 +76,20 @@ hr {
 
 @media only screen and (max-width: 992px) {
   #navbarNav {
-    background: #EAEAEA !important;
-    margin-top: -0.9em !important;
-    margin-left: -15px !important;
-    margin-right: -15px !important;
+    background: #9FA8DA !important;
+    margin-top: -0.8em !important;
+    margin-left: -17px !important;
+    margin-right: -17px !important;
     z-index: 1 !important; }
   #navbarNav .nav-link {
-    color: black !important;
+    color: #FFFFFF !important;
     padding-left: 2%;
-    border-bottom: 2px solid #fff !important;
+    border-bottom: 2px solid #ccc !important;
     padding-bottom: 3%;
-    margin-bottom: 1%;
     height: 5em; }
+  #navbarNav .nav-link:hover {
+    background: #ffffff !important;
+    color: #3949AB !important; }
   .custom-button {
     padding-top: 0.6em !important; } }
 
